--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -1,14 +1,14 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}" title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -23,7 +23,7 @@
 <!--popup content-->
 <md-content class="popup-padding">
 
-    <div layout="column" layout-align="center center">
+    <div layout="column" layout-align="center center" ng-controller="languageController">
 
         <md-table-container>
 
@@ -33,8 +33,8 @@
                 <thead md-head md-order="query.order">
                 <tr md-row>
                     <th md-column></th>
-                    <th md-column><span class="color-darkcyan">NOME</span></th>
-                    <th md-column><span class="color-darkcyan">TIPO TAG</span></th>
+                    <th md-column><span class="color-darkcyan">{{lang.name | uppercase}}</span></th>
+                    <th md-column><span class="color-darkcyan">{{lang.type | uppercase}}</span></th>
                 </tr>
                 </thead>
 
@@ -42,21 +42,21 @@
                 <tr md-row md-select="anchor" md-on-select="logItem" md-auto-select="true"
                     ng-repeat="tag in tags | limitTo: query.limit: (query.page -1 ) * query.limit">
                     <td md-cell><img
-                            ng-src="{{!tagsContainTag(tagsOnline, tag) ? '../SMARTSTUDIO/img/icons/tags/offline_tag_24.png' : '../SMARTSTUDIO/img/icons/tags/online_tag_24.png'}}"
-                            alt="Stato tag" title="Stato tag"></td>
+                            ng-src="{{!tagsContainTag(tagsOnline, tag) ? 'img/icons/tags/offline_tag_24.png' : 'img/icons/tags/online_tag_24.png'}}"
+                            alt="{{lang.tagState}}" title="{{lang.tagState}}"></td>
                     <td md-cell ng-click="editCell($event, tag, 'name')" ng-class="{'md-placeholder': !tag.name}">
                         {{tag.name || 'Inserire nome'}}
                     </td>
                     <td md-cell
-                        ng-class="{'md-placeholder': !tag.type_name}">{{tag.type_name || 'Inserire tipo'}}
+                        ng-class="{'md-placeholder': !tag.type_name}">{{tag.type_name || lang.insertType}}}
                     </td>
                     <td md-cell>
-                        <md-button ng-click="tagMacs(tag)" class="md-raised background-darkcyan color-white">GESTIONE
-                            MACS
-                    <td md-cell ng-click="deleteRow(tag)"><img src="../SMARTSTUDIO/img/icons/delete_trash_24.png" alt="Cancella tag" title="Cancella tag"></td>
+                        <md-button ng-click="tagMacs(tag)" class="md-raised background-darkcyan color-white">
+                            {{lang.macsManaging | uppercase}}
+                    <td md-cell ng-click="deleteRow(tag)"><img src="img/icons/delete_trash_24.png" alt="{{lang.deleteTag}}" title="{{lang.deleteTag}}"></td>
                 </tr>
                 <tr md-row ng-show="tableEmpty">
-                    <td md-cell colspan="8" class="text-center color-red">Nessun risultato trovato</td>
+                    <td md-cell colspan="8" class="text-center color-red">{{lang.noResultFound}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -64,8 +64,8 @@
 
         <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
-                <img src="../SMARTSTUDIO/img/icons/add_row_32.png" class="outline-none cursor-pointer"
-                     ng-click="addNewRow()" alt="Aggiungi tag" title="Aggiungi tag">
+                <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
+                     ng-click="addNewRow()" alt="{{lang.addTag}}" title="{{lang.addTag}}">
             </div>
         </md-input-container>
 
