--- a/components/locations-table.html
+++ b/components/locations-table.html
@@ -1,19 +1,19 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}" title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">SITI</h1>
+                <h1 class=" font-iceberg font-x-large">{{lang.sites | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -23,7 +23,7 @@
 <!--popup content-->
 <md-content class="popup-padding">
 
-    <div layout="column" layout-align="center center">
+    <div layout="column" layout-align="center center" ng-controller="languageController">
 
         <md-table-container>
 
@@ -32,10 +32,10 @@
 
                 <thead md-head md-order="query.order">
                 <tr md-row>
-                    <th md-column><span class="color-darkcyan">NOME</span></th>
-                    <th md-column><span class="color-darkcyan">LATITUDE</span></th>
-                    <th md-column><span class="color-darkcyan">LONGITUDE</span></th>
-                    <th md-column><span class="color-darkcyan">RAGGIO</span></th>
+                    <th md-column><span class="color-darkcyan">{{lang.name | uppercase}}</span></th>
+                    <th md-column><span class="color-darkcyan">{{lang.latitude | uppercase}}</span></th>
+                    <th md-column><span class="color-darkcyan">{{lang.longitude | uppercase}}</span></th>
+                    <th md-column><span class="color-darkcyan">{{lang.radius | uppercase}}</span></th>
                     <th md-column></th>
                 </tr>
                 </thead>
@@ -45,22 +45,22 @@
                     ng-repeat="location in locationsTable | limitTo: query.limit: (query.page -1 ) * query.limit">
                     <td md-cell class="no-wrap" ng-click="editCell($event, location, 'name')"
                         ng-class="{'md-placeholder': !location.name}">
-                        {{location.name || 'Inserire nome'}}
+                        {{location.name || lang.insertName}}
                     </td>
                     <td md-cell class="no-wrap" ng-click="editCell($event, location, 'latitude')"
-                        ng-class="{'md-placeholder': !location.latitude}">{{location.latitude || 'Inserire latitudine'}}
+                        ng-class="{'md-placeholder': !location.latitude}">{{location.latitude || lang.insertLatitude}}
                     </td>
                     <td md-cell class="no-wrap" ng-click="editCell($event, location, 'longitude')"
-                        ng-class="{'md-placeholder': !location.longitude}">{{location.longitude || 'Inserire longitudine'}}
+                        ng-class="{'md-placeholder': !location.longitude}">{{location.longitude || lang.insertLongitude}}
                     </td>
                     <td md-cell class="no-wrap" ng-click="editCell($event, location, 'radius')"
                         ng-class="{'md-placeholder': !location.radius.toString()}">{{location.radius}}
                     </td>
                     <td md-cell class="no-wrap" ng-click="deleteRow(location)"><img
-                            src="../SMARTSTUDIO/img/icons/delete_trash_24.png" alt="Cancella sito" title="Cancella sito"></td>
+                            src="img/icons/delete_trash_24.png" alt="Cancella sito" title="Cancella sito"></td>
                 </tr>
                 <tr md-row ng-show="tableEmpty">
-                    <td md-cell colspan="8" class="text-center color-red">Nessun risultato trovato</td>
+                    <td md-cell colspan="8" class="text-center color-red">{{lang.noResultFound}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -68,8 +68,8 @@
 
         <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
-                <img src="../SMARTSTUDIO/img/icons/add_row_32.png" class="outline-none cursor-pointer"
-                     ng-click="addNewRow()" alt="Aggiungi sito" title="Aggiungi sito">
+                <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
+                     ng-click="addNewRow()" alt="{{lang.addSite}}" title="{{lang.addSite}}">
             </div>
         </md-input-container>
 
