--- a/components/tags-info.html
+++ b/components/tags-info.html
@@ -1,19 +1,19 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar" ng-class="isTagInAlarm">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}" title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class="font-iceberg font-x-large" ng-repeat="tag in tags">-{{tag.name}}-</h1>
+                <h1 class="font-iceberg font-x-large" ng-repeat="tag in tags">{{tag.name}}/</h1>
             </div>
         </div>
     </md-toolbar>
@@ -26,15 +26,15 @@
                 <md-list-item ng-repeat="tag in tags">
                     <md-list>
                         <md-list-item class="width-300-px">
-                            <p class="float-left">Nome:</p>
+                            <p class="float-left">{{lang.name}}:</p>
                             <p class="float-right text-right">{{tag.name}}</p>
                         </md-list-item>
                         <md-list-item class="width-300-px">
-                            <p class="float-left">Piano:</p>
+                            <p class="float-left">{{lang.floor}}:</p>
                             <p class="float-right text-right">{{tag.floor_name}}</p>
                         </md-list-item>
                         <md-list-item class="width-300-px">
-                            <p class="float-left">Ancora:</p>
+                            <p class="float-left">{{lang.anchor}}:</p>
                             <p class="float-right text-right">{{tag.anchor_name}}</p>
                         </md-list-item>
                     </md-list>
