--- a/components/versions.html
+++ b/components/versions.html
@@ -85,6 +85,14 @@
                     </td>
                     <td md-cell>11/04/2019</td>
                 </tr>
+                <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
+                    <td md-cell class="color-orange">1.3.0</td>
+                    <td md-cell>
+                        UPDATES: Inserimeto della possibilita' di traddurre il sito in diverse lingue<br>
+                        UPDATES: Aggiunta la possibilita' di premere enter per fare il login qundo si e' sul campo username o password<br>
+                    </td>
+                    <td md-cell>25/04/2019</td>
+                </tr>
                 </tbody>
             </table>
         </md-table-container>
